--- a/nim/analysis.ipynb
+++ b/nim/analysis.ipynb
@@ -30,9 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = \"meta-llama3-8b-instruct\"\n",
+    "model = \"meta-llama3-70b-instruct\"\n",
     "n_tokens = 100\n",
-    "device = \"A100 SMX4 40GB\"\n",
+    "device = \"A100 PCIe 80GB\"\n",
     "\n",
     "stats_df = pd.read_csv('data/%s_users_stats.csv' % model)\n",
     "stats_history_df = pd.read_csv('data/%s_users_stats_history.csv' % model)\n",
