--- a/test_70b.ipynb
+++ b/test_70b.ipynb
@@ -38,14 +38,29 @@
      "text": [
       "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import os\n",
     "import json\n",
     "import time\n",
     "import random\n",
     "import pandas as pd\n",
-    "from transformers import AutoTokenizer"
+    "from dotenv import load_dotenv\n",
+    "from transformers import AutoTokenizer\n",
+    "from urllib.request import HTTPError, Request, URLError, urlopen\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -95,12 +110,12 @@
    "id": "d63bdce6",
    "metadata": {},
    "source": [
-    "## NIM"
+    "### NIM A100_PCIe_80GB_4x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "89cdeae6-9259-4bca-9e8c-e867877b25f5",
    "metadata": {},
    "outputs": [],
@@ -110,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "88d5253c-76d2-4958-99ac-d69041ed51d7",
    "metadata": {},
    "outputs": [],
@@ -168,6 +183,83 @@
    "source": [
     "user_message = \"Describe the purpose of a 'hello world' program in one line.\"\n",
     "generate_nim(user_message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19858bfd-de56-4180-b345-fc27c04997b4",
+   "metadata": {},
+   "source": [
+    "### NIM on NVCF H100_4x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0886dd10-2483-4122-8ea0-6367b54d06a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = 'https://api.nvcf.nvidia.com/v2/nvcf/pexec/functions/{function_id}'\n",
+    "\n",
+    "def generate_nim_nvcf(prompt, function_id = 'd4b187f8-3812-4eff-8f1f-5e1afabde9ea'):\n",
+    "    headers = {\n",
+    "        'accept': 'application/json',\n",
+    "        'Content-Type': 'application/json',\n",
+    "        'Authorization': f'Bearer {os.environ['NGC_RUN_TOKEN']}'\n",
+    "    }\n",
+    "    data = {\n",
+    "        \"model\": \"meta-llama3-70b-instruct\",\n",
+    "        \"messages\": [\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": prompt\n",
+    "            }\n",
+    "        ],\n",
+    "        \"max_tokens\": 512\n",
+    "    }\n",
+    "    _url = url.format(function_id=function_id)\n",
+    "    start = time.perf_counter()\n",
+    "    completion = requests.post(_url, headers=headers, json=data).json()\n",
+    "    request_time = time.perf_counter() - start\n",
+    "    response = completion['choices'][0]['message']['content']\n",
+    "    return {\n",
+    "        'in_token_count': len(tokenizer.encode(prompt)),\n",
+    "        'out_token_count': len(tokenizer.encode(response)),\n",
+    "        'time': request_time,\n",
+    "        'question': prompt,\n",
+    "        'answer': response,\n",
+    "        'note': 'nim'\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0af39805-abb6-445e-809f-02cc2d19e8a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'in_token_count': 10,\n",
+       " 'out_token_count': 300,\n",
+       " 'time': 5.951904542016564,\n",
+       " 'question': 'Describe the purpose of a getting started tutorial.',\n",
+       " 'answer': \"The purpose of a getting started tutorial is to provide a clear and concise introduction to a product, software, platform, or service, helping users to quickly understand its core features, functionality, and benefits. The primary goal is to facilitate a smooth onboarding process, enabling users to get started with confidence and minimal frustration.\\n\\nA getting started tutorial typically aims to:\\n\\n1. **Introduce the basics**: Provide an overview of the product's main features, functionality, and purpose.\\n2. **Walk through the setup process**: Guide users through the installation, configuration, or registration process.\\n3. **Demonstrate key tasks**: Show users how to perform essential tasks, such as creating an account, uploading data, or completing a specific task.\\n4. **Highlight key benefits**: Emphasize the benefits and value the product or service offers, such as increased productivity, improved organization, or enhanced collaboration.\\n5. **Reduce learning curve**: Break down complex concepts into simple, easy-to-understand steps, making it easier for users to grasp the product's capabilities.\\n6. **Build confidence**: Encourage users to explore and use the product by providing a sense of accomplishment and confidence in their ability to use it effectively.\\n7. **Reduce support queries**: By providing clear instructions and guidance, getting started tutorials help reduce the number of support requests and inquiries.\\n\\nUltimately, a well-designed getting started tutorial should empower users to quickly get started with a product or service, reducing frustration, and increasing user adoption and engagement.\",\n",
+       " 'note': 'nim'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_message = \"Describe the purpose of a getting started tutorial.\"\n",
+    "generate_nim_nvcf(user_message)"
    ]
   },
   {
@@ -280,14 +372,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "5201edf8-1242-4f1e-b650-b3d445e20a58",
    "metadata": {},
    "outputs": [],
    "source": [
     "generate_fns = [\n",
     "    (generate_nim, 'nim'),\n",
-    "    (generate_bedrock, 'bedrock')\n",
+    "    (generate_nim_nvcf, 'nim_nvcf'),\n",
+    "    (generate_bedrock, 'bedrock'),\n",
     "]\n",
     "\n",
     "n_seconds = 600\n",
@@ -297,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "7e917946-43b6-42d2-b091-ac3939183279",
    "metadata": {},
    "outputs": [],
@@ -321,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "8ab209a3-2803-41f6-b698-09fd4221318d",
    "metadata": {},
    "outputs": [],
@@ -335,7 +428,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
+   "id": "a4756649-e0a5-44ef-b5b5-63074ea2c25b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs['nim_nvcf']['out_tokens_per_s'] = dfs['nim_nvcf']['out_token_count'] / dfs['nim_nvcf']['time']\n",
+    "dfs['nim_nvcf']['total_tokens_per_s'] = (\n",
+    "    dfs['nim_nvcf']['in_token_count'] + \\\n",
+    "    dfs['nim_nvcf']['out_token_count']) / \\\n",
+    "    dfs['nim_nvcf']['time']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "a4be5e22-a3bd-4fb9-a0d8-3df070bf7f1a",
    "metadata": {},
    "outputs": [],
@@ -352,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "1fae97e5-02cc-4b2c-96c9-66204fcfb78a",
    "metadata": {},
    "outputs": [
@@ -477,7 +584,7 @@
        "4           19.906762  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +595,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
+   "id": "f5474f2e-0e04-4bcb-9d97-e4a445200291",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>in_token_count</th>\n",
+       "      <th>out_token_count</th>\n",
+       "      <th>time</th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>note</th>\n",
+       "      <th>out_tokens_per_s</th>\n",
+       "      <th>total_tokens_per_s</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58</td>\n",
+       "      <td>309</td>\n",
+       "      <td>5.932194</td>\n",
+       "      <td>Think through this step by step. If the sequen...</td>\n",
+       "      <td>Let's break it down step by step:\\n\\n1. We're ...</td>\n",
+       "      <td>nim</td>\n",
+       "      <td>52.088654</td>\n",
+       "      <td>61.865812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>440</td>\n",
+       "      <td>8.230150</td>\n",
+       "      <td>Implement a Python function to compute the Fib...</td>\n",
+       "      <td>Here is a Python function to compute the Fibon...</td>\n",
+       "      <td>nim</td>\n",
+       "      <td>53.461966</td>\n",
+       "      <td>54.798515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>19</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1.261108</td>\n",
+       "      <td>If a train travels 120 kilometers in 2 hours, ...</td>\n",
+       "      <td>To find the average speed, we divide the dista...</td>\n",
+       "      <td>nim</td>\n",
+       "      <td>36.475861</td>\n",
+       "      <td>51.541977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>440</td>\n",
+       "      <td>8.294982</td>\n",
+       "      <td>Implement a Python function to compute the Fib...</td>\n",
+       "      <td>Here is a Python function to compute the Fibon...</td>\n",
+       "      <td>nim</td>\n",
+       "      <td>53.044118</td>\n",
+       "      <td>54.370221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19</td>\n",
+       "      <td>46</td>\n",
+       "      <td>1.191493</td>\n",
+       "      <td>If a train travels 120 kilometers in 2 hours, ...</td>\n",
+       "      <td>To find the average speed, we divide the dista...</td>\n",
+       "      <td>nim</td>\n",
+       "      <td>38.607011</td>\n",
+       "      <td>54.553386</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   in_token_count  out_token_count      time  \\\n",
+       "0              58              309  5.932194   \n",
+       "1              11              440  8.230150   \n",
+       "2              19               46  1.261108   \n",
+       "3              11              440  8.294982   \n",
+       "4              19               46  1.191493   \n",
+       "\n",
+       "                                            question  \\\n",
+       "0  Think through this step by step. If the sequen...   \n",
+       "1  Implement a Python function to compute the Fib...   \n",
+       "2  If a train travels 120 kilometers in 2 hours, ...   \n",
+       "3  Implement a Python function to compute the Fib...   \n",
+       "4  If a train travels 120 kilometers in 2 hours, ...   \n",
+       "\n",
+       "                                              answer note  out_tokens_per_s  \\\n",
+       "0  Let's break it down step by step:\\n\\n1. We're ...  nim         52.088654   \n",
+       "1  Here is a Python function to compute the Fibon...  nim         53.461966   \n",
+       "2  To find the average speed, we divide the dista...  nim         36.475861   \n",
+       "3  Here is a Python function to compute the Fibon...  nim         53.044118   \n",
+       "4  To find the average speed, we divide the dista...  nim         38.607011   \n",
+       "\n",
+       "   total_tokens_per_s  \n",
+       "0           61.865812  \n",
+       "1           54.798515  \n",
+       "2           51.541977  \n",
+       "3           54.370221  \n",
+       "4           54.553386  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs['nim_nvcf'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "e1ea4aa0-6fe5-4a39-bac8-bf40f8373093",
    "metadata": {},
    "outputs": [
@@ -619,7 +862,7 @@
        "4         35.928211           39.009773  0.001912  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,11 +884,7 @@
    "id": "78488146-067b-4511-8a91-43a38726d256",
    "metadata": {},
    "source": [
-    "### NIM container Llama3 is way less tuned\n",
-    "Bedrock is much more built to give you refined and succinct answers out-of-the-box.\n",
-    "NIM requires you know how to do prompting, and maybe some data science to get the LLM to behave.\n",
-    "This has significant effects on math questions. \n",
-    "NIM generates verbose anwsers:"
+    "### No difference with big model"
    ]
   },
   {
@@ -673,6 +912,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b7c2853f-414d-46b4-aa25-337542b86bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product of 9 and 8 is 72.\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = dfs['nim_nvcf'].question == 'What is the product of 9 and 8?'\n",
+    "print(dfs['nim_nvcf'][f].answer.sample(1).values[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f664a910-c07a-49a1-aef0-5dad1662a4ef",
    "metadata": {},
@@ -682,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "91cbfc1d-68c8-41ff-8a91-8564d84bb236",
    "metadata": {},
    "outputs": [
@@ -711,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "d18bea3c-e90c-4521-8ba2-640c72cfc12c",
    "metadata": {},
    "outputs": [
@@ -729,7 +987,7 @@
        "Name: total_tokens_per_s, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +998,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
+   "id": "171c93fa-df7f-442f-98c7-6df8bb4372b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    97.000000\n",
+       "mean     53.132487\n",
+       "std       6.135504\n",
+       "min      35.945535\n",
+       "25%      51.541977\n",
+       "50%      54.608035\n",
+       "75%      56.318189\n",
+       "max      62.320864\n",
+       "Name: total_tokens_per_s, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs['nim_nvcf'].total_tokens_per_s.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "4309833c-8c8b-4261-8e59-23bd7a1a0aaa",
    "metadata": {},
    "outputs": [
@@ -758,13 +1045,62 @@
        "Name: total_tokens_per_s, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dfs['bedrock'].total_tokens_per_s.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "9b39465e-bd2e-482f-b014-493e2d2efcdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NIM on NVCF 4x H100_80GB devices enabled 53.97% more queries in 10 minutes than Bedrock.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pct_increase = (\n",
+    "    dfs['nim_nvcf'].total_tokens_per_s.describe()['count'] / \\\n",
+    "    dfs['bedrock'].total_tokens_per_s.describe()['count'] - 1\n",
+    ") * 100\n",
+    "msg = 'NIM on NVCF 4x H100_80GB devices enabled %s more queries in 10 minutes than Bedrock.'\n",
+    "print(msg % (str(round(pct_increase, 2)) + '%'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "33e665e1-e555-4bf0-80bb-d3b9817c831f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NIM on NVCF 4x H100_80GB devices processed 62.97% more tokens in 10 minutes than Bedrock.\n",
+      "NIM processed 32664 tokens.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nim_nvcf_total_tokens=(dfs['nim_nvcf'].in_token_count + dfs['nim_nvcf'].out_token_count).sum()\n",
+    "bedrock_total_tokens=(dfs['bedrock'].in_token_count + dfs['bedrock'].out_token_count).sum()\n",
+    "pct_increase = (\n",
+    "    nim_nvcf_total_tokens / bedrock_total_tokens - 1\n",
+    ") * 100\n",
+    "msg = 'NIM on NVCF 4x H100_80GB devices processed %s more tokens in 10 minutes than Bedrock.'\n",
+    "print(msg % (str(round(pct_increase, 2)) + '%'))\n",
+    "print('NIM processed %s tokens.' % nim_nvcf_total_tokens)"
    ]
   },
   {
@@ -806,41 +1142,6 @@
     "NIM on the other hand has no variable cost beyond paying for the energy or renting the GPU you run code on. \n",
     "In this example, the peak GPU utilization measured on the server where we ran the NIM container never reached 1%. \n",
     "The server on Coreweave cost us ~$10.00/hour. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "ed84a4bb-31c9-415d-a81d-90b773d22758",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The NIM container processed and generated a total of 12009 tokens, costing ~$0.017.\n"
-     ]
-    }
-   ],
-   "source": [
-    "hourly_rate = 10.00\n",
-    "utilization_rate = 0.01\n",
-    "sim_time_hrs = 1/6\n",
-    "\n",
-    "print('The NIM container processed and generated a total of %s tokens, costing ~$%s.' % (\n",
-    "    (dfs['nim']['in_token_count'] + dfs['nim']['out_token_count']).sum(),\n",
-    "    round(hourly_rate * utilization_rate * sim_time_hrs, 3)\n",
-    "))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "58fa9722-d612-4a88-8014-dfe4619412fd",
-   "metadata": {},
-   "source": [
-    "This is just meant to give you a rough sense of the cost dynamics. \n",
-    "GPU utilization likely won't scale exactly linearly for your use cases, \n",
-    "so only extrapolate within reason and make sure to test for yourself."
    ]
   }
  ],
