--- a/test_8b.ipynb
+++ b/test_8b.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d64e0d50-7940-4420-9ae9-02deb6b04a1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef494f4f-85d9-4072-8008-06d92e5508c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ngc cloud-function function create \\\n",
+    "    --container-args \"run -it --rm --runtime=nvidia --gpus all --shm-size=16GB -e NGC_API_KEY -v '$LOCAL_NIM_CACHE:/opt/nim/.cache' -u $(id -u) -p 8000:8000\" \\\n",
+    "    --container-environment-variable \"NGC_API_KEY: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\" \\\n",
+    "    --container-environment-variable \"LOCAL_NIM_CACHE:~/.cache/nim\" \\\n",
+    "    --container-image zhxkmsaasxhw/meta-llama3-70b-instruct:latest \\\n",
+    "    --health-uri /v1/health/ready \\\n",
+    "    --inference-port 8000 \\\n",
+    "    --inference-url /v1/chat/completions \\\n",
+    "    --name meta-llama3-70b-instruct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed6232e9-b435-43b4-aec7-f5ccbbf1764e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "24e84786-e765-40e2-aae2-872f04054f73",
    "metadata": {},
