add document processing sample

--- a/test_70b.ipynb
+++ b/test_70b.ipynb
@@ -28,24 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "c85be6c0-4e08-4b4b-8a84-2fcd9aa9332a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,17 +48,17 @@
     "import json\n",
     "import time\n",
     "import random\n",
+    "import concurrent.futures\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from transformers import AutoTokenizer\n",
-    "from urllib.request import HTTPError, Request, URLError, urlopen\n",
     "\n",
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "0e197e1c-cbdd-4338-a88d-c26ea4726600",
    "metadata": {},
    "outputs": [],
@@ -89,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "4d6fdba8-08c5-43f7-af36-c837127db3d9",
    "metadata": {},
    "outputs": [
@@ -195,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "0886dd10-2483-4122-8ea0-6367b54d06a9",
    "metadata": {},
    "outputs": [],
@@ -237,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "0af39805-abb6-445e-809f-02cc2d19e8a5",
    "metadata": {},
    "outputs": [
@@ -246,13 +239,13 @@
       "text/plain": [
        "{'in_token_count': 10,\n",
        " 'out_token_count': 300,\n",
-       " 'time': 5.951904542016564,\n",
+       " 'time': 6.51422745801392,\n",
        " 'question': 'Describe the purpose of a getting started tutorial.',\n",
        " 'answer': \"The purpose of a getting started tutorial is to provide a clear and concise introduction to a product, software, platform, or service, helping users to quickly understand its core features, functionality, and benefits. The primary goal is to facilitate a smooth onboarding process, enabling users to get started with confidence and minimal frustration.\\n\\nA getting started tutorial typically aims to:\\n\\n1. **Introduce the basics**: Provide an overview of the product's main features, functionality, and purpose.\\n2. **Walk through the setup process**: Guide users through the installation, configuration, or registration process.\\n3. **Demonstrate key tasks**: Show users how to perform essential tasks, such as creating an account, uploading data, or completing a specific task.\\n4. **Highlight key benefits**: Emphasize the benefits and value the product or service offers, such as increased productivity, improved organization, or enhanced collaboration.\\n5. **Reduce learning curve**: Break down complex concepts into simple, easy-to-understand steps, making it easier for users to grasp the product's capabilities.\\n6. **Build confidence**: Encourage users to explore and use the product by providing a sense of accomplishment and confidence in their ability to use it effectively.\\n7. **Reduce support queries**: By providing clear instructions and guidance, getting started tutorials help reduce the number of support requests and inquiries.\\n\\nUltimately, a well-designed getting started tutorial should empower users to quickly get started with a product or service, reducing frustration, and increasing user adoption and engagement.\",\n",
        " 'note': 'nim'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
