--- a/document-processing/analysis.ipynb
+++ b/document-processing/analysis.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,6 +439,36 @@
     "p_tokens, c_tokens = df.prompt_tokens.sum(), df.completion_tokens.sum()\n",
     "total_gpu_time = str(datetime.timedelta(seconds=df.total_time.sum()))\n",
     "title = f\"{p_tokens:,} prompt tokens, {c_tokens:,} completion tokens, in {total_gpu_time} on {device}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Estimated) number of document pages processed is 54249.\n",
+      "(Estimated) number of summary pages generated is 3504.\n",
+      "Billable compute time is 2.514 NVIDIA A100-SXM4-40GB hours.\n"
+     ]
+    }
+   ],
+   "source": [
+    "words_per_token = 0.75\n",
+    "words_in_a_page = 500\n",
+    "seconds_per_hour = 3600\n",
+    "\n",
+    "print(f\"(Estimated) number of document pages processed is {\n",
+    "    round(p_tokens * words_per_token * (1 / words_in_a_page))\n",
+    "}.\")\n",
+    "\n",
+    "print(f\"(Estimated) number of summary pages generated is {\n",
+    "    round(c_tokens * words_per_token * (1 / words_in_a_page))\n",
+    "}.\")\n",
+    "print(f\"Billable compute time is {round(df.total_time.sum() / 3600, 3)} {device} hours.\")"
    ]
   },
   {
@@ -659,24 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 248,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "now = datetime.datetime.now().strftime(\"%Y-%m-%d_%H:%M:%S\")\n",
     "\n",
-    "plt.savefig(f'results_{device}_{now}.png')\n",
-    "plt.savefig(f'results_{device}_{now}_transparent.png', transparent=True)"
+    "fig.savefig(f'results_{device}_{now}.png')\n",
+    "fig.savefig(f'results_{device}_{now}_transparent.png', transparent=True)"
    ]
   }
  ],
